--- a/xbalaz15/pom.xml
+++ b/xbalaz15/pom.xml
@@ -103,6 +103,7 @@
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>3.1.0</version>
                 <configuration>
+                    <finalName>ija-app</finalName>
                     <archive>
                         <manifest>
 
