--- a/xbalaz15/pom.xml
+++ b/xbalaz15/pom.xml
@@ -106,6 +106,18 @@
         <directory>build</directory>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
 
                 <!-- Building an executable jar -->
 
