--- a/xbalaz15/pom.xml
+++ b/xbalaz15/pom.xml
@@ -132,7 +132,7 @@
                             <transformers>
                                 <transformer implementation=
                                                      "org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.javaprojekt.Main</mainClass>
+                                    <mainClass>com.javaprojekt/com.javaprojekt.Main</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
